crates/test-generator/tests/snapshots/tsx/test_generated_pair_pattern.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const { key1: value22 } = obj3;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (object_pattern
        (pair_pattern
          key: (property_identifier "key1")
          value: (identifier "value22")
        )
      )
      value: (identifier "obj3")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:15 to 1:22 }, name: "value22", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:27 to 1:31 }, name: "obj3", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
