crates/test-generator/tests/snapshots/tsx/test_generated_parenthesized_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
(value23)

AST:
(program
  (expression_statement
    (parenthesized_expression
      (identifier "value23")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "value23",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 2,
                end_line: 1,
                end_column: 9,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
