crates/test-generator/tests/snapshots/tsx/test_generated_parenthesized_type.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value24: (string | number) = 'test';

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value24")
      type: (type_annotation
        (parenthesized_type
          (union_type
            (predefined_type "string")
            (predefined_type "number")
          )
        )
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "value24", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
