crates/test-generator/tests/snapshots/tsx/test_generated_pattern.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
{ binding }

AST:
(program
  (statement_block
    (expression_statement
      (identifier "binding")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:3 to 1:10 }, name: "binding", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
