crates/test-generator/tests/snapshots/tsx/test_generated_predefined_type.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value25: string = 'test';

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value25")
      type: (type_annotation
        (predefined_type "string")
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "value25", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
