crates/test-generator/tests/snapshots/tsx/test_generated_readonly_type.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value26: readonly number[] = [1, 2, 3];

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value26")
      type: (type_annotation
        (readonly_type
          (array_type
            (predefined_type "number")
          )
        )
      )
      value: (array
        (number "1")
        (number "2")
        (number "3")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "value26", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
