crates/test-generator/tests/snapshots/tsx/test_generated_regex_pattern.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const regex = /pattern/g;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "regex")
      value: (regex
        pattern: (regex_pattern)
        flags: (regex_flags)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "regex",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 12,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
