crates/test-generator/tests/snapshots/tsx/test_generated_rest_pattern.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const [first, ...rest] = arr2;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (array_pattern
        (identifier "first")
        (rest_pattern
          (identifier "rest")
        )
      )
      value: (identifier "arr2")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "first",
            position: Position {
                start_line: 1,
                start_column: 8,
                end_line: 1,
                end_column: 13,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "rest",
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 22,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "arr2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 26,
                end_line: 1,
                end_column: 30,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
